# fatrate

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
bot/: commandsworker.py  config.py  main.py
bot/database/: database.py  schema.sql
bot/handlers/: __init__.py  common.py  fat_commands.py  get_nickname.py  prefix.py
bot/locales/ru/: errors.ftl  logging.ftl  strings.ftl
bot/middlewares/: db.py  l10n.py
